# pilot

./: .gitignore  CLITools.cpp  CLITools.h  CMakeLists.txt  NetworkInterface.cpp  NetworkInterface.h  README.txt  Session.cpp  Session.h  UserMan.cpp  UserMan.h  crow_all.h  main.cpp  pilot  users.json  util.cpp  util.h
static/: pilot.css
templates/: index.html  login.html  settings.html  terminal.html  users.html
